[package]
name = "shuttle-axum"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.7.3"
serde = { version = "1.0.219", features = ["derive"] }
shuttle-axum = { version = "0.55.0", default-features = false, features = ["axum-0-7"] }
shuttle-runtime = "0.55.0"
shuttle-shared-db = { version = "0.55.0", features = ["sqlx", "postgres"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls"] }
tokio = "1.28.2"
tower-http = { version = "0.5.0", features = ["fs"] }
